--- a/EGMII.P.I.D/web/bootstrap/css/bootstrap.css
+++ b/EGMII.P.I.D/web/bootstrap/css/bootstrap.css
@@ -2327,7 +2327,7 @@ th {
   background-color: #f9f9f9;
 }
 .table-hover > tbody > tr:hover {
-  background-color: #f5f5f5;
+  background-color: #c7c7c7;
 }
 table col[class*="col-"] {
   position: static;
