--- a/EGMII.P.I.D/web/bootstrap/css/table-design.css
+++ b/EGMII.P.I.D/web/bootstrap/css/table-design.css
@@ -30,6 +30,8 @@ input[type=number]::-webkit-outer-spin-button {
     -moz-appearance: none;
     appearance: none;
     margin: 0; 
+    -webkit-box-sizing:border-box;
+   -moz-box-sizing: border-box;
 }
 
 .readonlyWhite{
