SubconpurchaseOrder date picker not working

--- a/EGMII.P.I.D/web/bootstrap/css/table-design.css
+++ b/EGMII.P.I.D/web/bootstrap/css/table-design.css
@@ -48,6 +48,9 @@ input[type=number]::-webkit-outer-spin-button {
     cursor:default;
 }
 
+ .label {
+                font-weight:bold;
+            }
 .search {
     width:250px;
     height:35px;
