--- a/EGMII.P.I.D/web/Reports/Inventory/AccessoriesInventory.jrxml
+++ b/EGMII.P.I.D/web/Reports/Inventory/AccessoriesInventory.jrxml
@@ -76,34 +76,52 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 			</frame>
 		</band>
 	</title>
-	<columnHeader>
-		<band height="61" splitType="Stretch">
+	<pageHeader>
+		<band height="50">
 			<staticText>
-				<reportElement x="0" y="0" width="260" height="61" uuid="7d3cc8bc-148c-4c6a-8353-7861a678c6a8"/>
+				<reportElement x="155" y="0" width="260" height="50" uuid="7d3cc8bc-148c-4c6a-8353-7861a678c6a8"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial Unicode MS" size="16"/>
 				</textElement>
 				<text><![CDATA[Accessories Inventory]]></text>
 			</staticText>
 			<textField pattern="MMMMM dd, yyyy">
-				<reportElement x="415" y="0" width="157" height="61" uuid="7f7b07f9-5f96-42b6-a8bf-fcdb8a24da2e"/>
+				<reportElement x="415" y="0" width="157" height="50" uuid="7f7b07f9-5f96-42b6-a8bf-fcdb8a24da2e"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial Unicode MS" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
-	</columnHeader>
-	<detail>
-		<band height="487" splitType="Stretch">
+	</pageHeader>
+	<lastPageFooter>
+		<band height="50">
+			<elementGroup>
+				<textField>
+					<reportElement x="509" y="30" width="24" height="20" uuid="8cf26bea-6a6e-403f-891b-1bd4ef8eab31"/>
+					<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Report">
+					<reportElement x="553" y="30" width="19" height="20" uuid="744b05b2-6256-4344-94a9-8a4056a588b9"/>
+					<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement x="533" y="30" width="20" height="20" uuid="2f8b741d-15bf-4e45-a9fa-faa0329b6004"/>
+					<text><![CDATA[of]]></text>
+				</staticText>
+			</elementGroup>
+		</band>
+	</lastPageFooter>
+	<summary>
+		<band height="50">
 			<componentElement>
-				<reportElement key="table" style="table" x="114" y="0" width="360" height="50" uuid="8622a7e9-cd06-49c3-8520-68291bee26d7"/>
+				<reportElement key="table" style="table" x="0" y="0" width="572" height="50" uuid="8622a7e9-cd06-49c3-8520-68291bee26d7"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="New Dataset 1" uuid="8dabad98-a979-4611-8c8b-635afdc1b8c5">
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
 					<jr:column width="90" uuid="c3804d17-2a4d-4ef6-a3e1-1adffe25d816">
-						<jr:columnHeader style="table_CH" height="30">
+						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="90" height="30" uuid="01f3fb05-015e-4092-93c2-1015996135c1"/>
 								<textElement verticalAlignment="Middle">
@@ -112,7 +130,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 								<text><![CDATA[ Item Code]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table_TD" height="20">
+						<jr:detailCell style="table_TD" height="20" rowSpan="1">
 							<textField>
 								<reportElement x="0" y="0" width="90" height="20" uuid="33194540-8fc6-4e92-8e74-18b8ed5f57fe"/>
 								<textFieldExpression><![CDATA[$F{itemCode}]]></textFieldExpression>
@@ -120,7 +138,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="90" uuid="ccdf91d9-0701-4bf5-ba85-c901c6043f94">
-						<jr:columnHeader style="table_CH" height="30">
+						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="90" height="30" uuid="dbbceb8e-914c-4a4d-aabb-03608cb9740d"/>
 								<textElement verticalAlignment="Middle">
@@ -129,7 +147,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 								<text><![CDATA[ Item Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table_TD" height="20">
+						<jr:detailCell style="table_TD" height="20" rowSpan="1">
 							<textField>
 								<reportElement x="0" y="0" width="90" height="20" uuid="7e4366ce-88d0-4874-bfe8-84f1ac21bbd9"/>
 								<textFieldExpression><![CDATA[$F{itemName}]]></textFieldExpression>
@@ -137,7 +155,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="90" uuid="45040ba4-8947-4a8a-9b37-56fcda74b95f">
-						<jr:columnHeader style="table_CH" height="30">
+						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="90" height="30" uuid="97eabb0c-b2b5-4f25-9896-a0d9c81dedeb"/>
 								<textElement verticalAlignment="Middle">
@@ -147,7 +165,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
  Measurement]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table_TD" height="20">
+						<jr:detailCell style="table_TD" height="20" rowSpan="1">
 							<textField>
 								<reportElement x="0" y="0" width="90" height="20" uuid="334bd7ba-ece0-48a3-a867-7800eb81a9e5"/>
 								<textFieldExpression><![CDATA[$F{unitMeasurement}]]></textFieldExpression>
@@ -155,7 +173,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="90" uuid="162f8a8c-2008-456c-a72f-51151818d337">
-						<jr:columnHeader style="table_CH" height="30">
+						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="90" height="30" uuid="2b2c25f3-7e29-4983-bbb2-0aa8d60db7d7"/>
 								<textElement verticalAlignment="Middle">
@@ -164,7 +182,7 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 								<text><![CDATA[ Quantity]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table_TD" height="20">
+						<jr:detailCell style="table_TD" height="20" rowSpan="1">
 							<textField>
 								<reportElement x="0" y="0" width="90" height="20" uuid="9114c1ff-1301-4cc9-b65a-b8aba2f2e9e4"/>
 								<textFieldExpression><![CDATA[$F{qty}]]></textFieldExpression>
@@ -174,5 +192,5 @@ WHERE I.inventoryType = "accessories" AND inv.qty !=0]]>
 				</jr:table>
 			</componentElement>
 		</band>
-	</detail>
+	</summary>
 </jasperReport>
