--- a/EGMII.P.I.D/web/Reports/Inventory/ProductionInventory.jrxml
+++ b/EGMII.P.I.D/web/Reports/Inventory/ProductionInventory.jrxml
@@ -80,26 +80,26 @@ WHERE I.inventoryType = "production" and INV.qty != 0]]>
 			</frame>
 		</band>
 	</title>
-	<columnHeader>
-		<band height="61" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="0" width="260" height="61" uuid="7d3cc8bc-148c-4c6a-8353-7861a678c6a8"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial Unicode MS" size="16"/>
-				</textElement>
-				<text><![CDATA[Production Inventory]]></text>
-			</staticText>
+	<pageHeader>
+		<band height="50">
 			<textField pattern="MMMMM dd, yyyy">
-				<reportElement x="415" y="0" width="157" height="61" uuid="7f7b07f9-5f96-42b6-a8bf-fcdb8a24da2e"/>
+				<reportElement x="415" y="0" width="157" height="50" uuid="7f7b07f9-5f96-42b6-a8bf-fcdb8a24da2e"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial Unicode MS" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="155" y="0" width="260" height="50" uuid="7d3cc8bc-148c-4c6a-8353-7861a678c6a8"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial Unicode MS" size="16"/>
+				</textElement>
+				<text><![CDATA[Production Inventory]]></text>
+			</staticText>
 		</band>
-	</columnHeader>
-	<detail>
-		<band height="487" splitType="Stretch">
+	</pageHeader>
+	<summary>
+		<band height="50">
 			<componentElement>
 				<reportElement key="table" style="table" x="104" y="0" width="360" height="50" uuid="f2a1cf85-e5f7-48f4-a618-01d58c22a305"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
@@ -178,5 +178,5 @@ WHERE I.inventoryType = "production" and INV.qty != 0]]>
 				</jr:table>
 			</componentElement>
 		</band>
-	</detail>
+	</summary>
 </jasperReport>
